bug fixed incorrect channel name from ieeg

--- a/code/ecg/sample_hr_hrv.ipynb
+++ b/code/ecg/sample_hr_hrv.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
     "\n",
     "data_pull_min=5\n",
     "# ecg_channels = [metadata.loc[subject_name]['ECG Electrode']]\n",
-    "ecg_channels = ['EKG01']\n",
+    "ecg_channels = ['EKG1']\n",
     "\n",
     "clip_duration_sec =  end_time_sec - start_time_sec\n",
     "clip_duration_min = clip_duration_sec / 60\n",
@@ -183,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.28s/it]\n"
+      "100%|██████████| 1/1 [00:02<00:00,  2.17s/it]\n"
      ]
     }
    ],
@@ -207,6 +207,7 @@
     "    else:\n",
     "        end_usec = start_usec + (5 * 60 * 1e6)\n",
     "    data, fs = get_iEEG_data(username, pwd_bin_path, portal_name, start_usec, end_usec, select_electrodes=ecg_channels)\n",
+    "    data.columns=ecg_channels\n",
     "\n",
     "    time = np.linspace(start_usec, end_usec, len(data), endpoint=False)\n",
     "    data.index = pd.to_datetime(time, unit='us')\n",
@@ -265,7 +266,7 @@
     "    # hr_df.index = pd.to_datetime(hr_df.index).tz_localize(tz)\n",
     "\n",
     "\n",
-    "    # resample to 6Hz\n",
+    "    # resample to 0.1Hz\n",
     "    hr_rs = hr_df.resample(\"10s\").mean()   \n",
     "\n",
     "    #take the min in each 10s window\n",
@@ -281,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -296,8 +297,7 @@
     }
    ],
    "source": [
-    "\n",
-    "ch = ['EKG01']\n",
+    "ch = ecg_channels[0]\n",
     "rw = 5\n",
     "\n",
     "# Apply the default theme\n",
@@ -364,13 +364,6 @@
     "fig.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
