--- a/code/ecg/process_hr_hrv.ipynb
+++ b/code/ecg/process_hr_hrv.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,70 +464,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Running for each Seizure segment"
+    "### Calculating HR, HRV for each Seizure segment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/12 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting data for HUP190 from 555518 to 559118\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 12/12 [00:17<00:00,  1.44s/it]\n",
-      "100%|██████████| 60/60 [00:00<00:00, 418.83it/s]\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting data for HUP190 from 561390 to 564990\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 12/12 [00:16<00:00,  1.39s/it]\n",
-      "100%|██████████| 60/60 [00:00<00:00, 419.69it/s]\n",
-      "  0%|          | 0/12 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Getting data for HUP190 from 595295 to 598895\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 92%|█████████▏| 11/12 [00:15<00:01,  1.36s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for sub in subject_data['subject'].values[-2:]:\n",
+    "for sub in subject_data['subject'].values[0:1]:\n",
     "\n",
     "    sz_times = sz_data[sz_data['Patient']==sub]\n",
     "    # print(sz_times)\n",
@@ -562,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,17 +518,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for file in files:\n",
+    "for file in files[0:1]:\n",
     "    file_path = \"/users/jalp/git/ecg-ieeg/data/\"+file\n",
     "    df = pd.DataFrame(np.load(file_path))\n",
     "    df = df.dropna()\n",
     "    df = df.drop(columns=[1])\n",
     "    npy = df.to_numpy()\n",
     "    np.save(file_path, npy)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculating Z-score for Sz segments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 54/54 [00:08<00:00,  6.73it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sub in tqdm(subject_data['subject']):\n",
+    "    files  = [file for file in os.listdir(\"/users/jalp/git/ecg-ieeg/data\") if sub in file]\n",
+    "    files.sort()\n",
+    "    sz_files  = [file for file in files if \"sz\" in file]\n",
+    "    inter_files  = [file for file in files if \"inter\" in file]\n",
+    "\n",
+    "    if len(inter_files)==1:\n",
+    "        inter_data  = np.load(\"/users/jalp/git/ecg-ieeg/data/\"+inter_files[0])\n",
+    "        rmssd_mean = np.mean(inter_data[:,1])\n",
+    "        rmssd_std = np.std(inter_data[:,1])\n",
+    "\n",
+    "        hr_mean = np.mean(inter_data[:,2])\n",
+    "        hr_std = np.std(inter_data[:,2])\n",
+    "\n",
+    "        for file in sz_files:\n",
+    "            # print(sz_files)\n",
+    "            seg_data = np.load(\"/users/jalp/git/ecg-ieeg/data/\"+file)\n",
+    "            # print(seg_data) \n",
+    "\n",
+    "            #calculate z score\n",
+    "            seg_data[:,1] = np.round((seg_data[:,1]-rmssd_mean)/rmssd_std,3)\n",
+    "            seg_data[:,2] = np.round((seg_data[:,2]-hr_mean)/hr_std, 3)\n",
+    "\n",
+    "            zscore_file = \"/users/jalp/git/ecg-ieeg/data/\"+file.replace(\"sz\", \"zscore\")\n",
+    "            np.save(zscore_file, seg_data)\n",
+    "    else:\n",
+    "        continue\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -1647,7 +1646,7 @@
     "        except Exception as e:\n",
     "            print(e)\n",
     "            continue\n",
-    "    file_name = \"./../../data/\"+sub+\"_inter_\"+\"_ecg_hr_hrv\"\n",
+    "    file_name = \"./../../data/\"+sub+\"_inter_\"+\"ecg_hr_hrv\"\n",
     "    hrv_np = hrv.to_numpy()\n",
     "    #delete HR column\n",
     "    hrv_np=np.delete(hrv_np, 1,1)\n",
